--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # Datasource configuration
-quarkus.datasource.db-kind=h2
-quarkus.datasource.username=sa
-quarkus.datasource.password=
-quarkus.datasource.jdbc.url=jdbc:h2:mem:db
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username = root
+quarkus.datasource.password = TechyGenics85
+quarkus.datasource.devservices.enabled=false
+quarkus.container-image.build=false
+
+quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/java_news
+
+quarkus.dev.mode.remote-container=false
